[dependencies]
fontdue = '0.3.2'
glium = '0.27.0'
lyon_tessellation = '0.16.0'
thiserror = '1.0.20'
vector2math = '0.10.4'
glutin = '0.24.1'

[dependencies.crossbeam-utils]
optional = true
version = '0.7.2'

[dependencies.rlua]
optional = true
version = '0.17.0'

[dependencies.rodio]
optional = true
version = '0.11.0'

[dependencies.serde]
optional = true
version = '1.0.116'

[dependencies.serde_derive]
optional = true
version = '1.0.116'

[dependencies.toml]
optional = true
version = '0.5.6'

[features]
default = ['sound', 'script']
script = ['ser', 'rlua', 'toml', 'glutin/serde']
sound = ['rodio', 'crossbeam-utils']
ser = ['serde', 'serde_derive']

[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
description = 'A textureless 2d game engine'
edition = '2018'
name = 'kule'
version = '0.1.0'
